--- a/public/pkce-oauth.html
+++ b/public/pkce-oauth.html
@@ -97,7 +97,7 @@
                 sessionStorage.setItem('pkce_state', state);
 
                 const CLIENT_ID = '59f34afe-9b1b-4f3a-9311-fd792fe249ca';
-                const REDIRECT_URI = 'https://vaultydocs.com/pkce-callback';
+                const REDIRECT_URI = 'https://secureportdocs.com/pkce-callback';
                 const SCOPE = 'openid profile email User.Read offline_access';
 
                 const authUrl = new URL('https://login.microsoftonline.com/common/oauth2/v2.0/authorize');
