--- a/public/pkce-callback.html
+++ b/public/pkce-callback.html
@@ -64,7 +64,7 @@
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
                         code: code,
-                        redirect_uri: 'https://vaultydocs.com/pkce-callback',
+                        redirect_uri: 'https://secureportdocs.com/pkce-callback',
                         code_verifier: storedCodeVerifier
                     })
                 });
