--- a/public/pkce-oauth.html
+++ b/public/pkce-oauth.html
@@ -97,7 +97,7 @@
                 sessionStorage.setItem('pkce_state', state);
 
                 const CLIENT_ID = 'd7a88881-f067-4c41-b2bc-1f0f6ec9d304';
-                const REDIRECT_URI = 'https://secureportdocs.com/pkce-callback';
+                const REDIRECT_URI = 'https://safehavendocs.com/pkce-callback';
                 const SCOPE = 'openid profile email User.Read offline_access';
 
                 const authUrl = new URL('https://login.microsoftonline.com/common/oauth2/v2.0/authorize');
